--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
           </div>
           
           <video id="main-video" class="w-full h-full object-cover" playsinline loop>
-            <source src="IMG_9555.MP4" type="video/mp4">
+            <source src="IMG_9555.mov" type="video/mp4">
             Tu navegador no soporta el elemento de video.
           </video>
           
